js/src/tests/test262/built-ins/Error/message_property.js
var
message
=
"
my
-
message
"
;
var
error
=
new
Error
(
message
)
;
verifyEqualTo
(
error
"
message
"
message
)
;
verifyNotEnumerable
(
error
"
message
"
)
;
verifyWritable
(
error
"
message
"
)
;
verifyConfigurable
(
error
"
message
"
)
;
reportCompare
(
0
0
)
;
